# openvino-surface-sharing

./: README.md
source/: CMakeLists.txt  main.cpp
